--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="components/visuals/lineChartDirective.js"></script>
     <script src="components/visuals/webserviceGuiDirective.js"></script>
     <script src="components/visuals/scatterPlotDirectives.js"></script>
+    <script src="components/visuals/hBarChartDirective.js"></script>
 
     <!-- filters -->
     <script src="components/filters/customFilters.js"></script>
